login for admin and added admin pages

--- a/client/templates/base/footer.html
+++ b/client/templates/base/footer.html
@@ -17,15 +17,15 @@
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Dribbble</a><br/>
+						<a href="#">GitHub</a><br/>
 						<a href="#">Twitter</a><br/>
-						<a href="#">Facebook</a>
+						<a href="#">Facebook</a><br/>
+						<a href="#">LinkedIn</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About Stanley</h4>
-					<p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
+					<p><a href="/admin">Admin Login</a></p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
