Added blog post pages layout and CRUD functionality

--- a/client/templates/base/nav.html
+++ b/client/templates/base/nav.html
@@ -18,7 +18,10 @@
             <li><a href="{{pathFor 'blog'}}">Blog</a></li>
             <li><a href="{{pathFor 'contact'}}">Contact</a></li>
             {{#if currentUser}}
+                <li><a href="{{pathFor 'list_projects'}}">Admin - Projects</a></li>
+                <li><a href="{{pathFor 'list_posts'}}">Admin - Posts</a></li>
                 <li><a href="#" class="logout-user">Logout</a></li>
+                
             {{/if}}
           </ul>
         </div><!--/.nav-collapse -->
