--- a/client/templates/admin/posts/edit_post.html
+++ b/client/templates/admin/posts/edit_post.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Edit Post: <small>{{title}}</small></h2>
-                <form class="add_post_form">
+                <form class="edit_post_form">
                     <div class="form-group">
                         <label>Title</label>
                         <input type="text" class="form-control" id="title" name="title" value="{{title}}">
