--- a/client/templates/admin/posts/list_posts.html
+++ b/client/templates/admin/posts/list_posts.html
@@ -8,13 +8,13 @@
             <table class="table table-striped">
                 <tr>
                     <td>Post Title</td>
-                    <td>Date Created</td>
+                    <td>Last Update</td>
                     <td></td>
                 </tr>
                 {{#each posts}}
                     <tr>
                         <td>{{title}}</td>
-                        <td>{{createdAt}}</td>
+                        <td>{{formatDate updatedAt}}</td>
                         <td><a href="/admin/posts/{{_id}}/edit" class="btn btn-default btn-tiny">Edit</a> <button class="btn btn-default delete_post">Delete</button></td>
                     </tr>
                 {{else}}
