--- a/client/templates/admin/projects/add_project.html
+++ b/client/templates/admin/projects/add_project.html
@@ -9,9 +9,8 @@
                         <input type="text" class="form-control" id="name" name="name" placeholder="Project Name">
                     </div>
                      <div class="form-group">
-                         <label>Project Date</label>
-                            DATEPICKER GOES HERE
-                          
+                        <label>Project Date</label>
+                            <input type="text" class="form-control" id="projectDate" name="projectDate">
                     </div>
                 
                    
