--- a/client/templates/admin/projects/edit_project.html
+++ b/client/templates/admin/projects/edit_project.html
@@ -9,9 +9,8 @@
                         <input type="text" class="form-control" id="name" name="name" placeholder="Project Name" value="{{name}}">
                     </div>
                    <div class="form-group">
-                         <label>Project Date</label>
-                            DATEPICKER
-                          
+                        <label>Project Date</label>
+                            <input type="text" class="form-control" id="projectDate" name="projectDate" value="{{projectDate}}">
                     </div>
 
                     <div class="form-group">
