--- a/client/templates/work/work.html
+++ b/client/templates/work/work.html
@@ -4,32 +4,14 @@
 	
 	<div class="container pt">
 		<div class="row mt centered">	
+			{{#each projects}}
 			<div class="col-lg-4">
-				<a class="zoom green" href="/project/1"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt="" /></a>
-				<p>APE</p>
+				<a class="zoom green" href="/project/{{_id}}"><img class="img-responsive" src="{{projectImage}}" alt="" /></a>
+				<p>{{name}}</p>
 			</div>
-			<div class="col-lg-4">
-				<a class="zoom green" href="/project/1"><img class="img-responsive" src="assets/img/portfolio/port02.jpg" alt="" /></a>
-				<p>RAIDERS</p>
-			</div>
-			<div class="col-lg-4">
-				<a class="zoom green" href="/project/1"><img class="img-responsive" src="assets/img/portfolio/port03.jpg" alt="" /></a>
-				<p>VIKINGS</p>
-			</div>
-		</div><!-- /row -->
-		<div class="row mt centered">	
-			<div class="col-lg-4">
-				<a class="zoom green" href="/project/1"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
-				<p>YODA</p>
-			</div>
-			<div class="col-lg-4">
-				<a class="zoom green" href="/project/1"><img class="img-responsive" src="assets/img/portfolio/port05.jpg" alt="" /></a>
-				<p>EMPERORS</p>
-			</div>
-			<div class="col-lg-4">
-				<a class="zoom green" href="/project/1"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt="" /></a>
-				<p>CHIEFS</p>
-			</div>
+			{{else}}
+			    <p>There are no projects</p>
+			{{/each}}
 		</div><!-- /row -->
 	</div><!-- /container -->
 
