--- a/client/templates/base/nav.html
+++ b/client/templates/base/nav.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{pathFor 'home'}}">Codefolio</a>
+          <a class="navbar-brand" href="{{pathFor 'home'}}">{{getSiteTitle}}</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
